# rag-bot

./: .vercelignore  DEPLOY.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: diagnostic.py  hello.py  index.py  requirements.txt  test.py
docs/: getting_started.txt
src/: __init__.py
src/rag_maker/: __init__.py  config.py  file_search.py  service.py
web/: app.js  index.html  styles.css
